@@ -92,6 +92,12 @@ class TestLog(ExternalBase):
         log = self.runbzr("log -r 1..3")[0]
         self.assertEquals(self.full_log, log)
 
+    def test_log_reversed_revspecs(self):
+        self._prepare()
+        self.run_bzr_error(('bzr: ERROR: Start revision must be older than '
+                            'the end revision.\n',),
+                           'log', '-r3..1')
+
     def test_log_revno_n_path(self):
         os.mkdir('branch1')
         os.chdir('branch1')
@@ -147,11 +153,13 @@ class TestLog(ExternalBase):
         self.runbzr('commit -m merge_branch_1')
         log = self.runbzr("log -r-1")[0]
         self.assertContainsRe(log, r'    tags: tag1')
+        log = self.runbzr("log -r3.1.1")[0]
+        self.assertContainsRe(log, r'    tags: tag1')
 
 
 class TestLogMerges(ExternalBase):
 
-    def test_merges_are_indented_by_level(self):
+    def _prepare(self):
         self.build_tree(['parent/'])
         self.run_bzr('init', 'parent')
         self.run_bzr('commit', '-m', 'first post', '--unchanged', 'parent')
@@ -165,6 +173,9 @@ class TestLogMerges(ExternalBase):
         os.chdir('../parent')
         self.run_bzr('merge', '../child')
         self.run_bzr('commit', '-m', 'merge branch 1')
+
+    def test_merges_are_indented_by_level(self):
+        self._prepare()
         out,err = self.run_bzr('log')
         # the log will look something like:
 #        self.assertEqual("""\
@@ -177,7 +188,6 @@ class TestLogMerges(ExternalBase):
 #  merge branch 1
 #    ------------------------------------------------------------
 #    revno: 1.1.2  
-#    merged: foo@example.com-20060328113140-91f43cfb46dc2863
 #    committer: Robert Collins <foo@example.com>
 #    branch nick: child
 #    timestamp: Tue 2006-03-28 22:31:40 +1100
@@ -185,7 +195,6 @@ class TestLogMerges(ExternalBase):
 #      merge branch 2
 #        ------------------------------------------------------------
 #        revno: 1.1.1.1
-#        merged: foo@example.com-20060328113140-1ba24f850a0ef573
 #        committer: Robert Collins <foo@example.com>
 #        branch nick: smallerchild
 #        timestamp: Tue 2006-03-28 22:31:40 +1100
@@ -193,7 +202,6 @@ class TestLogMerges(ExternalBase):
 #          branch 2
 #    ------------------------------------------------------------
 #    revno: 1.1.1
-#    merged: foo@example.com-20060328113140-5749a4757a8ac792
 #    committer: Robert Collins <foo@example.com>
 #    branch nick: child
 #    timestamp: Tue 2006-03-28 22:31:40 +1100
@@ -218,11 +226,88 @@ class TestLogMerges(ExternalBase):
         self.assertTrue('          branch 2' in out)
         self.assertTrue('    revno: 1.1.1' in out)
         self.assertTrue('      branch 1' in out)
-        self.assertTrue('revno: 1' in out)
+        self.assertTrue('revno: 1\n' in out)
         self.assertTrue('  first post' in out)
         self.assertEqual('', err)
 
+    def test_merges_single_merge_rev(self):
+        self._prepare()
+        out,err = self.run_bzr('log', '-r1.1.2')
+        # the log will look something like:
+#        self.assertEqual("""\
+#    ------------------------------------------------------------
+#    revno: 1.1.2  
+#    committer: Robert Collins <foo@example.com>
+#    branch nick: child
+#    timestamp: Tue 2006-03-28 22:31:40 +1100
+#    message:
+#      merge branch 2
+#        ------------------------------------------------------------
+#        revno: 1.1.1.1
+#        committer: Robert Collins <foo@example.com>
+#        branch nick: smallerchild
+#        timestamp: Tue 2006-03-28 22:31:40 +1100
+#        message:
+#          branch 2
+#""", out)
+        # but we dont have a nice pattern matcher hooked up yet, so:
+        # we check for the indenting of the commit message and the 
+        # revision numbers 
+        self.assertTrue('revno: 2' not in out)
+        self.assertTrue('  merge branch 1' not in out)
+        self.assertTrue('    revno: 1.1.2' in out)
+        self.assertTrue('      merge branch 2' in out)
+        self.assertTrue('        revno: 1.1.1.1' in out)
+        self.assertTrue('          branch 2' in out)
+        self.assertTrue('    revno: 1.1.1\n' not in out)
+        self.assertTrue('      branch 1' not in out)
+        self.assertTrue('revno: 1\n' not in out)
+        self.assertTrue('  first post' not in out)
+        self.assertEqual('', err)
 
+    def test_merges_partial_range(self):
+        self._prepare()
+        out,err = self.run_bzr('log', '-r1.1.1..1.1.2')
+        # the log will look something like:
+#        self.assertEqual("""\
+#    ------------------------------------------------------------
+#    revno: 1.1.2  
+#    committer: Robert Collins <foo@example.com>
+#    branch nick: child
+#    timestamp: Tue 2006-03-28 22:31:40 +1100
+#    message:
+#      merge branch 2
+#        ------------------------------------------------------------
+#        revno: 1.1.1.1
+#        committer: Robert Collins <foo@example.com>
+#        branch nick: smallerchild
+#        timestamp: Tue 2006-03-28 22:31:40 +1100
+#        message:
+#          branch 2
+#    ------------------------------------------------------------
+#    revno: 1.1.1
+#    committer: Robert Collins <foo@example.com>
+#    branch nick: child
+#    timestamp: Tue 2006-03-28 22:31:40 +1100
+#    message:
+#      branch 1
+#""", out)
+        # but we dont have a nice pattern matcher hooked up yet, so:
+        # we check for the indenting of the commit message and the 
+        # revision numbers 
+        self.assertTrue('revno: 2' not in out)
+        self.assertTrue('  merge branch 1' not in out)
+        self.assertTrue('    revno: 1.1.2' in out)
+        self.assertTrue('      merge branch 2' in out)
+        self.assertTrue('        revno: 1.1.1.1' in out)
+        self.assertTrue('          branch 2' in out)
+        self.assertTrue('    revno: 1.1.1' in out)
+        self.assertTrue('      branch 1' in out)
+        self.assertTrue('revno: 1\n' not in out)
+        self.assertTrue('  first post' not in out)
+        self.assertEqual('', err)
+
+ 
 class TestLogEncodings(TestCaseInTempDir):
 
     _mu = u'\xb5'
@@ -351,7 +436,7 @@ class TestLogFile(TestCaseWithTransport):
         os.chdir('parent')
         self.run_bzr('merge', '../child')
         self.run_bzr('commit', '-m', 'merge child branch')
-        
+       
         log = self.run_bzr('log', 'file1')[0]
         self.assertContainsRe(log, 'revno: 1\n')
         self.assertNotContainsRe(log, 'revno: 2\n')
@@ -368,5 +453,29 @@ class TestLogFile(TestCaseWithTransport):
         self.assertNotContainsRe(log, 'revno: 1\n')
         self.assertNotContainsRe(log, 'revno: 2\n')
         self.assertContainsRe(log, 'revno: 3\n')
+        self.assertNotContainsRe(log, 'revno: 3.1.1\n')
+        self.assertNotContainsRe(log, 'revno: 4\n')
+        log = self.run_bzr('log', '-r3.1.1', 'file2')[0]
+        self.assertNotContainsRe(log, 'revno: 1\n')
+        self.assertNotContainsRe(log, 'revno: 2\n')
+        self.assertNotContainsRe(log, 'revno: 3\n')
+        self.assertContainsRe(log, 'revno: 3.1.1\n')
+        self.assertNotContainsRe(log, 'revno: 4\n')
+        log = self.run_bzr('log', '-r4', 'file2')[0]
+        self.assertNotContainsRe(log, 'revno: 1\n')
+        self.assertNotContainsRe(log, 'revno: 2\n')
+        self.assertNotContainsRe(log, 'revno: 3\n')
+        self.assertContainsRe(log, 'revno: 3.1.1\n')
+        self.assertContainsRe(log, 'revno: 4\n')
+        log = self.run_bzr('log', '-r3..', 'file2')[0]
+        self.assertNotContainsRe(log, 'revno: 1\n')
+        self.assertNotContainsRe(log, 'revno: 2\n')
+        self.assertNotContainsRe(log, 'revno: 3\n')
+        self.assertContainsRe(log, 'revno: 3.1.1\n')
+        self.assertContainsRe(log, 'revno: 4\n')
+        log = self.run_bzr('log', '-r..3', 'file2')[0]
+        self.assertNotContainsRe(log, 'revno: 1\n')
+        self.assertContainsRe(log, 'revno: 2\n')
+        self.assertNotContainsRe(log, 'revno: 3\n')
         self.assertNotContainsRe(log, 'revno: 3.1.1\n')
         self.assertNotContainsRe(log, 'revno: 4\n')
